added windows and clean some structures